# crypto-assignments

./: 01_freqency_analysis.ipynb  01_frequency_analysis.py  01_permutations.py  README.md
01_a_five_one/: CMakeLists.txt  generator.cpp  generator.h  lfsr.cpp  lfsr.h  terminal.cc  terminal.cpp  terminal.h
02_block_ciphers/: ciphers.cpp  ciphers.h  key.txt  main.cpp  sample.txt
02_simon/: CMakeLists.txt  ciphers.cpp  ciphers.h  main.cpp  main.h  simon.cpp  simon.h
